# drcsim

./: CMakeLists.txt
atlas_description/urdf/: atlas_v4.urdf  atlas_v5_simple_shapes.urdf
cmake/: setup.sh.in
drcsim_gazebo/launch/: atlas_v3_irobot_hands.launch  drc_practice_task_1.launch  drc_practice_task_2.launch  drc_practice_task_3.launch  drc_practice_task_6.launch
drcsim_gazebo_plugins/: CMakeLists.txt
drcsim_model_resources/gazebo_models/: CMakeLists.txt  database.config
drcsim_model_resources/gazebo_models/block_angle_steps/: model.config  model.rsdf  model.sdf
drcsim_model_resources/gazebo_models/block_level_steps/: model.config  model.rsdf  model.sdf
drcsim_model_resources/gazebo_models/drc_vehicle/: model.config
drcsim_model_resources/gazebo_models/ladder_60deg_0rails/: CMakeLists.txt
drcsim_model_resources/gazebo_models/ladder_60deg_1rails/: CMakeLists.txt
drcsim_model_resources/worlds/: drc_practice_task_1.world  drc_practice_task_2.world  drc_practice_task_3.world  drc_practice_task_4.rworld  drc_practice_task_4.world  drc_practice_task_5.world  drc_practice_task_6.world
gazebo_models/environments/drc_terrain/: CMakeLists.txt
models/drc_robot/: CMakeLists.txt  manifest.xml
models/golf_cart/: model.sdf
models/low_poly_golf_cart/: model.sdf
plugins/: DRCFirehosePlugin.hh  DRCVehiclePlugin.cc
plugins/ros/: DRCVehiclePlugin.cc
ros/atlas_msgs/: AtlasPlugin.cpp  AtlasPlugin.h  DRCVehicleROSPlugin.cpp  SandiaHandPlugin.cpp  VRCPlugin.cpp  VRCPlugin.h  gazebo_ros_api_plugin.h  gazebo_ros_block_laser.cpp  gazebo_ros_multicamera.cpp
(+28 files in other folders)
